Edited wiki page through web user interface.

--- a/wiki/CodingConvetion.wiki
+++ b/wiki/CodingConvetion.wiki
@@ -11,6 +11,7 @@
       {
          public:
                 int m_IntVar;
+                void  ExampleFunction( int pIntVar, float pFloatVar );
       };
  
  
