--- a/wiki/CodingConvetion.wiki
+++ b/wiki/CodingConvetion.wiki
@@ -1,7 +1,7 @@
  ==function==
  * function name should start with *uppercase* letter.
  * function parameter must start with suffix *p* to identify them as a parameter variable.
-   e.g void ExampleFunction( int pIntVar, float pFloatVar );
+   e.g {{{ void ExampleFunction( int pIntVar, float pFloatVar ); }}}
 
  ==class==
  * class name should start with *c*
