--- a/wiki/CodingConvetion.wiki
+++ b/wiki/CodingConvetion.wiki
@@ -1,7 +1,8 @@
  ==function==
  * function name should start with *uppercase* letter.
  * function parameter must start with suffix *p* to identify them as a parameter variable.
-   e.g {{{ void ExampleFunction( int pIntVar, float pFloatVar ); }}}
+   e.g 
+      {{{ void ExampleFunction( int pIntVar, float pFloatVar ); }}}
 
  ==class==
  * class name should start with *c*
@@ -16,4 +17,7 @@
      };
     }}}
  
- 
+ ==variable==
+ * variable name should be start with lower case letter.
+ * e.g.
+   {{{ int varInt; }}}
