--- a/wiki/CodingConvetion.wiki
+++ b/wiki/CodingConvetion.wiki
@@ -18,6 +18,6 @@
     }}}
  
  ==variable==
- * variable name should be start with lower case letter.
+ * variable name mustbe start with lower case letter.
  * e.g.
    {{{ int varInt; }}}
